--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Portfolio Mathieu Huguet</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <header class="header">
+        <img class="main-img" src="#" alt="Mon bureau" />
+        <div class="nav">
+          <div class="hamburger">
+            <div class="top-line"></div>
+            <div class="bottom-line"></div>
+          </div>
+          <div class="nav-list">
+            <div class="contact"><a href="#">Contact</a></div>
+            <div class="cv"><a href="#">CV</a></div>
+            <div class="galerie"><a href="#">Galerie</a></div>
+          </div>
+        </div>
+      </header>
+      <main class="main">Main</main>
+      <footer class="footer">Footer</footer>
+    </div>
+  </body>
 </html>
