--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="bottom-line"></div>
           </div>
           <div class="nav-list">
-            <div class="contact"><a href="#">Contact</a></div>
-            <div class="cv"><a href="#">CV</a></div>
-            <div class="galerie"><a href="#">Galerie</a></div>
+            <div class="contact nav-item"><a href="#">Contact</a></div>
+            <div class="cv nav-item"><a href="#">CV</a></div>
+            <div class="galerie nav-item"><a href="#">Galerie</a></div>
           </div>
         </div>
       </header>
