--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main-container">
       <header class="header">
-        <img class="main-img" src="#" alt="Mon bureau" />
+        <img class="main-img" src="./img/topDesk.webp" alt="Mon bureau" />
         <div class="nav">
           <div class="hamburger">
             <div class="top-line"></div>
@@ -23,7 +23,9 @@
           </div>
         </div>
       </header>
-      <main class="main">Main</main>
+      <main class="main">
+        <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
+      </main>
       <footer class="footer">Footer</footer>
     </div>
   </body>
