Add new main image desk. Start script for ham + navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="main-container">
       <header class="header">
-        <img class="main-img" src="./img/topDesk.webp" alt="Mon bureau" />
+        <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
+        <!--NAVIGATION-->
+
         <div class="nav">
           <div class="hamburger">
             <div class="top-line"></div>
@@ -22,11 +24,53 @@
             <div class="galerie nav-item"><a href="#">Galerie</a></div>
           </div>
         </div>
+
+        <!--END-NAVIGATION-->
       </header>
+
       <main class="main">
-        <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
+        <content>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum
+            veritatis ipsa sit dignissimos nihil ullam incidunt quae voluptate
+            aut, quibusdam ipsum aspernatur ea nemo eius. Voluptatibus
+            consectetur, animi natus labore, ex nam rerum, fugit obcaecati ea
+            illum est voluptatum amet expedita ratione reprehenderit minus hic
+            nobis quae tempora. Ab, autem corporis nisi cumque a vel quis
+            suscipit voluptatem eveniet quam, quo accusamus ipsam dolorum.
+            Suscipit reiciendis autem maiores magni quae doloremque, quas
+            dolores fugit? Perferendis delectus quaerat ad labore repudiandae
+            quia voluptatem nulla vel assumenda maiores exercitationem esse amet
+            culpa, aliquid saepe natus non explicabo officiis tempore, maxime
+            aspernatur, consectetur est? Nam quae et reiciendis eveniet totam
+            distinctio tempora suscipit laudantium error modi numquam fuga
+            architecto voluptatibus, quia dolores ipsa adipisci sit ex placeat
+            officiis. Non totam obcaecati blanditiis laboriosam numquam, quaerat
+            voluptatum quibusdam corrupti sit mollitia. Voluptates voluptas
+            voluptatum error quae reprehenderit iste saepe ea rem quo beatae
+            doloremque in, molestias, quisquam qui quam aperiam aut voluptatem
+            temporibus explicabo neque. Facilis laborum ex quibusdam hic nulla
+            velit fuga corporis quasi a eveniet! Molestiae voluptas temporibus
+            quis, culpa possimus blanditiis officiis cupiditate optio quibusdam
+            soluta ut corporis velit earum iure asperiores dolorem quod non
+            praesentium facere placeat? Sequi cupiditate asperiores incidunt
+            magnam vitae placeat inventore quibusdam nam? Deleniti molestiae
+            assumenda amet, consequatur odio possimus. Et perspiciatis qui
+            reiciendis ullam eos, voluptates, a neque accusamus ipsum optio
+            illum vero. Optio aperiam eius tenetur eaque harum? Temporibus
+            deserunt voluptas distinctio natus tempora incidunt magni quibusdam?
+            Quis quasi harum nulla similique laborum saepe asperiores debitis,
+            officiis sapiente quidem iure repudiandae velit iusto? Veritatis
+            reprehenderit esse at aliquid dignissimos magni odit perferendis
+            quidem, consectetur sed blanditiis consequatur corporis possimus
+            est, itaque quo natus explicabo. Mollitia distinctio incidunt
+            exercitationem voluptatum, minima modi saepe illum inventore impedit
+            hic corrupti possimus quidem nisi eos aperiam asperiores architecto.
+          </p>
+        </content>
       </main>
       <footer class="footer">Footer</footer>
     </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
