set new ham position right + js IntersectionObs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
         <!--NAVIGATION-->
 
-        <div class="nav">
+        <div class="nav" id="navigationMenu">
           <div class="hamburger">
             <div class="top-line"></div>
             <div class="bottom-line"></div>
