fixed zoom on mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="main-container">
       <header class="header">
-        <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
+        <div class="deskPicContainer">
+          <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
+        </div>
         <!--NAVIGATION-->
 
         <div class="nav" id="navigationMenu">
@@ -66,6 +68,32 @@
             est, itaque quo natus explicabo. Mollitia distinctio incidunt
             exercitationem voluptatum, minima modi saepe illum inventore impedit
             hic corrupti possimus quidem nisi eos aperiam asperiores architecto.
+          </p>
+          <h2>Hello</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+            deleniti ipsa minus vel nulla cupiditate delectus dicta odio tempore
+            maxime possimus molestias tenetur magni non mollitia, optio
+            excepturi enim ea fugit, quae aut corrupti? Officiis itaque atque
+            laudantium totam corporis maiores odit quo molestias, animi
+            veritatis nostrum minus optio qui! Rem vero, doloremque, consectetur
+            obcaecati quo laboriosam eum quia sit cum quos hic at amet
+            explicabo! Dolor, consectetur natus iste qui consequuntur sunt?
+            Ipsam labore voluptate fugit veniam quidem blanditiis repellat enim,
+            odio omnis iure ullam nihil eos inventore, libero nemo maxime,
+            consequatur unde. Porro veritatis omnis similique? Quae esse hic
+            corporis harum itaque recusandae tempora maxime nemo aliquam
+            explicabo vel numquam rerum, magnam consectetur minima unde
+            excepturi quibusdam enim iste provident blanditiis optio alias eos.
+            Repudiandae excepturi explicabo deleniti alias molestias ad adipisci
+            nihil molestiae. Totam voluptatem cumque molestias iure ab maiores
+            facere quas, officiis veniam eveniet! Esse, reiciendis fuga,
+            asperiores repellendus dolore consequuntur iure quidem dolores quis
+            aperiam dicta eveniet veniam pariatur, culpa praesentium. Vero
+            eligendi, asperiores possimus dolore libero minima minus! Ex nisi
+            mollitia non est vero, officiis, fugiat exercitationem aliquam
+            praesentium incidunt perferendis veritatis distinctio. Quibusdam eum
+            vero saepe tenetur inventore harum, sapiente odit quasi consectetur!
           </p>
         </content>
       </main>
