--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Rubik+Marker+Hatch&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
+
     <title>Portfolio Mathieu Huguet</title>
   </head>
   <body>
@@ -32,7 +40,7 @@
 
       <main class="main">
         <content>
-          <h1>"Hi"</h1>
+          <h1>"Bienvenue !"</h1>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum
             veritatis ipsa sit dignissimos nihil ullam incidunt quae voluptate
