changed ham menu

--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
   <body>
     <div class="main-container">
       <header class="header">
-        <div class="deskPicContainer">
-          <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
-        </div>
         <!--NAVIGATION-->
 
         <div class="nav" id="navigationMenu">
+          <div class="logo"><img src="./img/LogoMW.png" /></div>
           <div class="hamburger">
             <div class="top-line"></div>
             <div class="bottom-line"></div>
           </div>
-          <div class="nav-list">
+          <div class="nav-list" id="nav-list">
             <div class="contact nav-item"><a href="#">Contact</a></div>
             <div class="cv nav-item"><a href="#">CV</a></div>
             <div class="galerie nav-item"><a href="#">Galerie</a></div>
@@ -36,6 +34,9 @@
         </div>
 
         <!--END-NAVIGATION-->
+        <div class="deskPicContainer">
+          <img class="work-room" src="./img/WorkRoom1.webp" alt="" />
+        </div>
       </header>
 
       <main class="main">
