changed color for links in nav menu

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
             <div class="bottom-line"></div>
           </div>
           <div class="nav-list" id="nav-list">
-            <div class="contact nav-item"><a href="#">Contact</a></div>
-            <div class="cv nav-item"><a href="#">CV</a></div>
-            <div class="galerie nav-item"><a href="#">Galerie</a></div>
+            <div class="cv nav-item"><a class="links" href="#">CV</a></div>
+            <div class="contact nav-item">
+              <a class="links" href="#">Contact</a>
+            </div>
+            <div class="galerie nav-item">
+              <a class="links" href="#">Galerie</a>
+            </div>
           </div>
         </div>
 
