--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <div class="bottom-line"></div>
           </div>
           <div class="nav-list" id="nav-list">
-            <div class="cv nav-item"><a class="links" href="#">CV</a></div>
+            <div class="cv nav-item"><a href="#">CV</a></div>
             <div class="contact nav-item">
-              <a class="links" href="#">Contact</a>
+              <a href="#">Contact</a>
             </div>
             <div class="galerie nav-item">
-              <a class="links" href="#">Galerie</a>
+              <a href="#">Galerie</a>
             </div>
           </div>
         </div>
