add media queries for nav menu over 768xp. Display none on former menus

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
         <!--NAVIGATION-->
 
         <div class="nav" id="navigationMenu">
-          <div class="logo"><img src="./img/LogoMW.png" /></div>
+          <div class="logo">
+            <img src="./img/LogoMW.png" />
+          </div>
+          <div class="menu-desktop">
+            <ul class="navlist-queries-sup">
+              <li>CV</li>
+              <li>Galerie</li>
+              <li>Blender</li>
+              <li>Contact</li>
+            </ul>
+          </div>
           <div class="hamburger">
             <div class="top-line"></div>
             <div class="bottom-line"></div>
