--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           </div>
           <div class="menu-desktop">
             <ul class="navlist-queries-sup">
-              <li>CV</li>
-              <li>Galerie</li>
-              <li>Blender</li>
-              <li>Contact</li>
+              <li><a href="#">CV
+                <div class="underline"></div>
+              </li>
+              <li><a href="#">Galerie</li>
+              <li><a href="#">Blender</li>
+              <li><a href="#">Contact</li>
             </ul>
           </div>
           <div class="hamburger">
